[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta = "0.10.1"
num-format = { version = "0.4", features = ["with-system-locale"] }
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
